--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -31,7 +31,8 @@
     }
   }
   .email {
-    padding-left: 20px;
+    text-align: center;
+    padding-left: 0px;
     padding-right: 0px;
     a {
       font-size: 30px !important;
