--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -1,4 +1,4 @@
-.logo {
+.logo a {
   font-weight: 800;
   font-size: 25px;
   margin: 2.5rem 3rem;
@@ -6,6 +6,7 @@
   cursor: pointer;
   position: fixed;
   z-index: 2;
+  text-decoration: none;
 
   &:hover {
     color: $hover-color;
