--- a/src/css/style.css
+++ b/src/css/style.css
@@ -184,8 +184,8 @@
 }
 
 @media (max-width: 768px) {
-  .logo {
-    margin: 2rem 2rem;
+  .logo a {
+    margin: 2rem 2rem !important;
   }
   .menu-wrap {
     margin: 1rem;
